# Voice-Orb

./: .gitignore  README.md  orb.toml  plugin.toml  pyproject.toml  settings.schema.json
scripts/: install_portable.md  install_portable.sh  install_to_ponderer.md  install_to_ponderer.sh  run_plugin.md  run_plugin.sh  voice_note.md  voice_note.sh
voice_orb/: __init__.md  bootstrap.md  bootstrap.py  server.md  server.py
voice_orb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
